--- a/index.html
+++ b/index.html
@@ -2,69 +2,107 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css">
+   <!-- Font Awesome -->
+   <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
+
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div class="container">
+    <section class="header">
+      <header>
+        <a href="#"><img src="images/logo.svg" alt="Logo do Website"></a>
+        <a href="#" class="btn-header">Try It Free</a>
+      </header>
+      <div>
+        <div class="text-header">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
+          <a href="$" class="btn-text-header">Get Started For Free</a>
+        </div>
+        <img src="images/illustration-mockups.svg" alt="">
+      </div>
+    </section>
 
-  Try It Free
+    <section class="cards">
+      <div class="card">
+        <div class="card-text">
+          <h1>Grow Together</h1>
+          <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form. </p>
+        </div>
+        <img src="images/illustration-grow-together.svg" alt="Imagem de ilustração de Grow Together">
+      </div>
+      <div class="card">
+        <img src="images/illustration-flowing-conversation.svg" alt="Imagem de ilustração de Flowing Conversations">
+        <div class="card-text">
+          <h1>Flowing Conversations</h1>
+          <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-text">
+          <h1>Your Users</h1>
+          <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+        </div>
+        <img src="images/illustration-your-users.svg" alt="Imagem de ilustração de Your Users">
+      </div>
+    </section>
 
-  Build The Community Your Fans Will Love
+    <section class="get-started">
+      <h1>Ready To Build Your Community?</h1>
+      <a href="#" class="btn-get-started">Get Started For Free</a>
+    </section>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+    <footer>
+      <div class="footer">
+        <div class="address">
+          <img src="images/logo.svg" alt="">
+          <div class="info">
+            <img src="images/icon-location.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+              incididunt ut labore et dolore magna aliqua</p>
+          </div>
+          <div class="info">
+            <img src="images/icon-phone.svg" alt="">
+            <p>+1-543-123-4567</p>
+          </div>
+          <div class="info">
+            <img src="images/icon-email.svg" alt="">
+            <p>example@huddle.com</p>
+          </div>
+        </div>
+  
+        <div class="links">
+          <div class="link-left">
+            About Us
+            What We Do
+            FAQ
+          </div>
+          <div class="link-right">
+            Career
+            Blog
+            Contact Us
+          </div>
+        </div>
 
-  Get Started For Free
+        <div class="icons">
+          <a href=""><i class="fab fa-facebook-f"></i></a>
+          <a href=""><i class="fab fa-twitter"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+      
 
-  Grow Together
+      &copy; Copyright 2018 Huddle. All rights reserved.
+    </footer>
+  </div>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
 
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
