--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/style.css">
    <!-- Font Awesome -->
    <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
+   
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+
 
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
@@ -20,9 +23,9 @@
         <a href="#"><img src="images/logo.svg" alt="Logo do Website"></a>
         <a href="#" class="btn-header">Try It Free</a>
       </header>
-      <div>
+      <div class="flex-header">
         <div class="text-header">
-          <h1>Build The Community Your Fans Will Love</h1>
+          <h1>Build The Community <br> Your Fans Will Love</h1>
           <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
           <a href="$" class="btn-text-header">Get Started For Free</a>
         </div>
@@ -36,7 +39,9 @@
           <h1>Grow Together</h1>
           <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form. </p>
         </div>
-        <img src="images/illustration-grow-together.svg" alt="Imagem de ilustração de Grow Together">
+        <div class="img">
+          <img src="images/illustration-grow-together.svg" alt="Imagem de ilustração de Grow Together">
+        </div>
       </div>
       <div class="card">
         <img src="images/illustration-flowing-conversation.svg" alt="Imagem de ilustração de Flowing Conversations">
@@ -97,12 +102,9 @@
           <a href=""><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-      
-
       &copy; Copyright 2018 Huddle. All rights reserved.
     </footer>
   </div>
-
 
 </body>
 </html>
