--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="images/illustration-flowing-conversation.svg" alt="Imagem de ilustração de Flowing Conversations">
+        <div class="img">
+          <img src="images/illustration-flowing-conversation.svg" alt="Imagem de ilustração de Flowing Conversations">
+        </div>
         <div class="card-text">
           <h1>Flowing Conversations</h1>
           <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
@@ -55,13 +57,16 @@
           <h1>Your Users</h1>
           <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
         </div>
-        <img src="images/illustration-your-users.svg" alt="Imagem de ilustração de Your Users">
+        <div class="img">
+          <img src="images/illustration-your-users.svg" alt="Imagem de ilustração de Your Users">
+        </div>
+
       </div>
     </section>
 
     <section class="get-started">
       <h1>Ready To Build Your Community?</h1>
-      <a href="#" class="btn-get-started">Get Started For Free</a>
+      <a href="#">Get Started For Free</a>
     </section>
 
     <footer>
