--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
    <!-- Font Awesome -->
-   <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
+   <script src="https://kit.fontawesome.com/7f0b8103ca.js" crossorigin="anonymous"></script>
+
    
    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
@@ -29,7 +30,10 @@
           <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
           <a href="$" class="btn-text-header">Get Started For Free</a>
         </div>
-        <img src="images/illustration-mockups.svg" alt="">
+        <div class="img">
+          <img src="images/illustration-mockups.svg" alt="">
+        </div>
+
       </div>
     </section>
 
@@ -70,9 +74,9 @@
     </section>
 
     <footer>
+      <img src="images/logo-white.svg" alt="">
       <div class="footer">
         <div class="address">
-          <img src="images/logo.svg" alt="">
           <div class="info">
             <img src="images/icon-location.svg" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
@@ -88,18 +92,34 @@
           </div>
         </div>
   
-        <div class="links">
+
           <div class="link-left">
-            About Us
-            What We Do
-            FAQ
+            <ul>
+              <li>
+                <a href="">About Us</a>
+              </li>
+              <li>
+                <a href="">What We Do</a>
+              </li>
+              <li>
+                <a href="">FAQ</a>
+              </li>
+            </ul>
           </div>
           <div class="link-right">
-            Career
-            Blog
-            Contact Us
+            <ul>
+              <li>
+                <a href="">Career</a>
+              </li>
+              <li>
+                <a href="">Blog</a>
+              </li>
+              <li>
+                <a href="">Contact Us</a>
+              </li>
+
+            </ul>
           </div>
-        </div>
 
         <div class="icons">
           <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -107,7 +127,7 @@
           <a href=""><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-      &copy; Copyright 2018 Huddle. All rights reserved.
+      <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
     </footer>
   </div>
 
